Change Notes
============

** Major Structure Update - This new version is not datafile compatible with previous versions! **
2011-05-16/17 FLI
	- Added unique object identifier to allow simple ID based referencing in external storage
	- Added a cube version that is able to swap the leaf-elements to disk to free up memory (CubeSwapIndexed)

2011-05-13 FLI
	- Removed Warnings

2010-10-19 FLI
	- Optimized Indexed Cube serialization/deserialization performance and size
	
2010-10-09 FLI
	- Added new cube type INDEXED (CubeIndexed). This cube uses an internal, indexed
	  data table for fast search. The cube is about 9-30 times faster then the FlexCube.
	  The memory consumption is about twice as much as the FLEX_CUBE.
	  NOTE: The indexed cube does NOT YET SUPPPORT the dimension behaiviors NO_SPLASH and
	  		NO_AGGREGATION!
	- The cube cell map is now stored in a ICellStore implementation. The default
	  implementation is the MapCellStore

2010-10-07 FLI
	- Fixed a problem in the CubeFlexCalc where "empty" spots could
	  occur in the cache if data is read from the cube during mass-insert 
	  mode.
	   
2010-10-03 jbornema
	- ICubeCacheControl.clearCache() added.

2010-08-26 jbornema
	- Query/IQuery.getSelectedDimensions() added.

2010-07-22 jbornema
	- ICellLoader added used by CountLoader to store count information in CellExt.
	- ICube.getCell(ICell, boolean) added
	- CountFunction added
	- CellExt.isEmpty() implemented
	- Cube exception messages improved
	- CountLoader supports now CellExt and KeyExt for storing count information as well
	
2010-07-14 jbornema
	- DimensionBehavior now serializable
	- IUserObject added implemented by KeyExt and CellExt
	- Key supports uses DimensionBehavior in isSubKey and isSubKeyElement methods
	- Cell.toString, .hashCode and .equals added
	- CellExt missing writeExternal and readExternal added
	- Cube.writeExternal fixed DimensionBehavior usage
	- CubeFlexCalc removed unused code and fixed DimensionBehavior usage in .writeExternal